ingress/manifests/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: echopulse-nodeport-svc
  labels:
    app: echopulse
spec:
  type: NodePort
  selector:
    app: echopulse
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30080
