ingress/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: echopulse-route
  labels:
    app: echopulse
spec:
  to:
    kind: Service
    name: echopulse-default-svc
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
